trying to get groovy working 2

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
 name: beakerx
-#channels:
-#  - conda-forge
+channels:
+  - conda-forge
 dependencies:
-#  - ipywidgets
+  - ipywidgets
   - beakerx
 
